--- a/css/creative.css
+++ b/css/creative.css
@@ -1,5 +1,44 @@
 /* CSS document with styles for classes not in the bootstraps.css */
 
+header {
+    position: relative;
+    width: 100%;
+    min-height: 800px;
+    text-align: center;
+    color: #000;
+    background-image: url(../img/jan.jpg);
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+header .header-content {
+    position: relative;
+    width: 100%;
+    padding: 100px 15px;
+    text-align: center;
+}
+
+header .header-content .header-content-inner h1 {
+    margin-top: 0;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+header .header-content .header-content-inner hr {
+    margin: 30px auto;
+}
+
+header .header-content .header-content-inner p {
+    margin-bottom: 50px;
+    font-size: 16px;
+    font-weight: 300;
+    color: #000;
+}
+
 .project-name {
 	text-align: center;
 	font-size: 18px;	
@@ -9,15 +48,9 @@
 }
 
 .project-name:hover {
-	text-align: center;
-	font-size: 18px;	
-	color: #6E878E;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	font-weight: bold;
-	text-decoration:none;
-	padding-bottom: 15px;
+	color:#3399B7;
 }
+
 .container-text {
 	text-align: center;
 	font-size: 18px;
@@ -45,6 +78,12 @@ p.bg-primary, p.bg-secondary {
 
 }
 
-.glyphicon.glyphicon-cd, .glyphicon.glyphicon-wrench, .glyphicon.glyphicon-credit-card {
+.glyphicon.glyphicon-cd, .glyphicon.glyphicon-wrench, .glyphicon.glyphicon-credit-card,
+ .glyphicon.glyphicon-heart, .glyphicon.glyphicon-star{
     font-size: 60px;
+}
+
+a.portfolio-box {
+	text-decoration: none;
+
 }
