--- a/Web/css/creative.css
+++ b/Web/css/creative.css
@@ -77,6 +77,9 @@ h2.container {
 	font-size:16px;
 	text-align:right;
 }
+.footer a {
+	color: #3399B7;
+}
 .portfolio-box {
 	width: 845px;
 	height: 524px;
